@@ -1,4 +1,4 @@
-#      $NetBSD: 3RDPARTY,v 1.647.2.4 2009/01/28 05:41:31 roy Exp $
+#      $NetBSD: 3RDPARTY,v 1.647.2.5 2009/02/06 02:29:50 snj Exp $
 #
 # This file contains a list of the software that has been integrated into
 # NetBSD where we are not the primary maintainer.
@@ -232,9 +232,10 @@ No changes for NetBSD integration - just import the new distribution on
 top of the current tree.
 
 Package:	dhcpcd
-Version:	4.0.7
-Current Vers:	4.0.7
+Version:	4.0.10
+Current Vers:	4.0.10
 Maintainer:	roy
+Archive Site:	ftp://roy.marples.name/pub/dhcpcd/
 Home Page:	http://roy.marples.name/projects/dhcpcd/
 Mailing List:	dhcpcd-discuss@marples.name
 License:	BSD (2-clause)
